# Qt-projects

./: README.md  gamewindow.h  main.cpp  obstacle.cpp  obstacle.h  player.cpp  player.h
SkiGame_01/: SkiGame.pro  gamewindow.cpp
SkiGame_02/: CMakeLists.txt  README.md  avalanche.cpp  avalanche.h  gamewidget.cpp  gamewidget.h  mainwindow.cpp  obstacle.cpp  obstacle.h  penguinpowerup.cpp  penguinpowerup.h  player.cpp  player.h  powerup.cpp  powerup.h  snowmanhunter.cpp  snowmanhunter.h
SkiGame_最初的版本/: SkiGame.pro  gamewindow.cpp  gamewindow.h  main.cpp  monster.cpp  monster.h  obstacle.cpp  obstacle.h  player.cpp  player.h  powerup.cpp  powerup.h  resources.qrc
